
 - NUT software-only drivers (dummy-ups, clone, clone-outlet) separated from
   serial drivers in respective Makefile and configure script options [#1446]

 - Fixed support for common USB matching options ("vendor", "device", "bus",
   etc.) for `riello_usb` and `richcomm_usb` [#1763] and updated man pages
   of all USB drivers using these options to include the same description
   [#1766]

 - Stuck drivers that do not react to `SIGTERM` quickly are now retried with
   `SIGKILL` [#1424]

 - Code which resolves full paths to libraries should now consider the common
   environment variable `LD_LIBRARY_PATH` as a preferred possible override
   to built-in paths (note that most operating systems advise against setting
   this variable unless troubleshooting, although other systems rely on it)
   [#805]

 - the nut-scanner program was updated to fall back to loading unresolved
   library filenames, hoping that `lt_dlopen()` implementation on the current
   platform would find library files better [#805]

 - detection of `libltdl` in `configure` script updated with fallback code to
   find it on systems that deliver the library to `/usr/local/lib` (e.g. on
   FreeBSD) [#1577]

 - an explicit `configure --with-nut-scanner` toggle was added, specifically
   so that build environments requesting `--with-all` but lack `libltdl` would
   abort and require either to install the dependency or explicitly forfeit
   the tool (some distro packages missed it quietly in the past) [#1560]

 - existing openssl-1.1.0 support added for NUT v2.8.0 release was tested to
   be sufficient without deprecation warnings for builds against openssl-3.0.x
   (but no real-time testing was done yet) [#1547]

 - upslog: Added support for logging multiple devices with one call to the
   program [#1604]

 - some fixes applied to Solaris/illumos packaging and SMF service support
   [#1554, #1564]

 - some fixes for builds on older OSes with less functional default system